--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,26 +1,16 @@
-name: Build and Push Docker Image
+name: Hello World Workflow
 
-on:
+on: 
   push:
     branches:
-      - main
+      - main  # Run only when code is pushed to main branch
 
 jobs:
-  docker:
+  say-hello:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4  # Pulls your repo into the runner
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/myapp:${{ github.sha }} .
-
-      - name: Push Docker image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/myapp:${{ github.sha }}
+      - name: Print greeting
+        run: echo "Hello from GitHub Actions 🚀"
